--- a/pag.html
+++ b/pag.html
@@ -55,8 +55,8 @@
   
     </section>
   
-    <section id="contato">
-      <h2>Contato</h2>
+    <section id="Redes Sociais">
+      <h2>Redes Sociais</h2>
       <ul>
         <li><a href="https://www.instagram.com/paulo.pcgo/">Instagram</a></li>
         <li><a href="https://github.com/Pcgo24?tab=repositories">GitHub</a></li>
